# test_task_3d_min_distance

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  distance_calculator.py  pyproject.toml
